# modelc

./: CITATION.cff  LICENSE  README.md  pyproject.toml
examples/sentiment-basic/: model.yaml  run.py
examples/sentiment-basic/model/: README.txt
examples/sentiment-basic/tokenizer/: README.txt
modelc/: cli.py  exceptions.py  inspectors.py  io_utils.py  manifest.py  models.py  package.py  runtime.py  schema.py
